--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -92,3 +92,8 @@ hostname=localhost
 #hostname, port, db has to be changed
 
 
+file.upload-dir=D:\\work\\chilla\\karuthal\\uploads
+
+
+google.storage.json.file=D:\\work\\chilla\\karuthal\\uploads\\chilla-karuthal-4336b3d6a3f1.json
+
