--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,21 @@
 			<artifactId>mailjet-client</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+		
+		   
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-websocket</artifactId>
+         <version>2.5.6</version>
+    </dependency>
+
+   
+
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-messaging</artifactId>
+    <version>6.2.0</version>
+</dependency>
 
 
 	</dependencies>
