--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username = cloner
 spring.datasource.password = team123
 
 
+spring.main.allow-circular-references=true
 
 
 #hibernate.hikari.autoCommit=false
